Bug 153642 - FILESAVE ODT File save fails if requested too frequently via WebDAV with Vibe server.
Summary: FILESAVE ODT File save fails if requested too frequently via WebDAV with Vibe...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.7
Keywords: regression
Depends on:
Blocks: WebDAV
  Show dependency treegraph
 
Reported: 2023-02-15 14:58 UTC by NISZ LibreOffice Team
Modified: 2023-03-10 09:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-02-15 14:58:57 UTC
Description:
Saving a remote (via WebDAV) ODT file with Writer fails if the save command given too frequently. If there is enough wait the save is successful. Can be reproduced with LibreOffice master with Vibe server.

Steps to Reproduce:
1.Open a remote file on a Vibe WebDAV server
2.Modify that with some text
3.Save
4.Save again quickly
5.Error message

Actual Results:
Error on the second save.

Expected Results:
Successful save.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 14a36ad49518bcb5b606b0f1640e3ca56b636e89
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 László Németh 2023-02-23 15:56:43 UTC
Proposed patch: https://gerrit.libreoffice.org/c/core/+/147570
Comment 2 Commit Notification 2023-02-24 09:44:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d6182cb6704c06f33d284874b9fe96c85cce5bf5

tdf#153642 ucb: fix broken save with cached DAVOptions

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2023-02-24 09:45:39 UTC
Commit description:

tdf#153642 ucb: fix broken save with cached DAVOptions

Trying to save a document within the lifetime of the
cached connection, e.g. re-save within a few seconds after
the first and successful save failed with an error message
in the case of Vibe 4.0.6 WebDAV server. Waiting 5-10 seconds
after the last try was the only workaround to re-save the
document.

Details: aDAVOptionsException in Content::getPropertyValues()
removed the isClass1 bit of the cached DAVOptions of the
same TargetURL (note: of the folder of the WebDAV document).
This disabled the DAV detection part of Content::getResourceType(),
and later the correct HTTP redirect for the DAV connection.
Fix this by keeping the cached bit in that case, too, when the
added connection has a different lifetime, than the cached one.

Follow-up to commit 30ca48f4dc0e65a3798e6b21574bc80f6d4953fa
"tdf#152493 ucb WebDAV: fix upload using HTTP 1.0 fallback".
Comment 4 NISZ LibreOffice Team 2023-02-27 08:43:59 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a235634ca5761aa4b330ebf7e3a2083b7db1606
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 5 Commit Notification 2023-02-27 15:21:25 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/bc48f2656c9a7bc1f41541bff66ec2c4496466a4

tdf#153642 ucb: fix broken save with cached DAVOptions

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-07 18:02:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/03fe458efe59a810f885817abf2a574c0dda1dc2

tdf#153642 ucb: fix broken save with cached DAVOptions

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.